# efmi-omni-sinusoid

./: CMakeLists.txt  README.MD
data/gazebo/translation/data4/: readme
data/gazebo/translation/data7/: readme.txt
data/real/: afterFilter.txt  values-rot-scale.txt
data/real/result/: results.txt  resultsMul.txt
data/real/test4/: createImgList.sh  gt.txt  imageLists.txt  resultCompare.m  results1.txt  results2.txt  results3.txt  results4.txt
include/: CCamModel.h  CFrame.h  CSystem.h  CTracking.h  CameraModel.h  Frame.h  OCamModel.h  PCamModel.h  Tracking.h  fftMath.hh  fmiImage.hh  fmiPlugin.hh  fmiRegistration.hh  misc_0.h  misc_1.h
plot/: README.MD  plot_debug.m  plot_grays.m  plot_maxpts.m
plot/22_23/new_results/: dus_wave.mat  dv_data.txt  dvs_wave.mat
plot/22_23/original_have/: idxs.txt
plot/22_23_1107/new_results/: du_data.txt  dus_wave.mat  dv_data.txt  dvs_wave.mat
plot/22_23_1107/original_have/: afterFilter.txt  delta_xs.txt  delta_ys.txt  idxs.txt  values-rot-scale.txt
plot/22_23_1113/new_results/: du_data.txt  dus_wave.mat  dv_data.txt  dvs_wave.mat
plot/22_23_1113/original_have/: afterFilter.txt  delta_xs.txt  delta_ys.txt  thetas.txt  values-rot-scale.txt
result/22_23/new_results/: du_data.txt
result/22_23/original_have/: afterFilter.txt  delta_xs.txt  delta_ys.txt  thetas.txt  values-rot-scale.txt
src/: CCamModel.cpp  CFrame.cpp  CSystem.cpp  CTracking.cpp  CameraModel.cpp  Frame.cpp  OCamModel.cpp  PCamModel.cpp  Tracking.cpp  fftMath.cc  fmiImage.cc  fmiPlugin.cc  fmiRegistration.cc  fmiRegistrationInit.cc  misc_1.cpp
test/: fish2pano.cpp  fitting_test.cpp  main.cpp  main_seq.cpp  main_transflow.cpp  main_vecflow.cpp  main_video.cpp  misc_test.cpp  omni2pano.cpp  test_z_rpy.cpp
